syntax = "proto3";

package example;

option go_package="storebytespb";

message StoreMessage{
    bytes content=1;
    string account=2;
    int32 id=3;
	string parent=4;
}

message StoreRequest {
    StoreMessage msg = 1;
}

message StoreResponse {
    bytes result = 1;
}

message LongStoreRequest {
	StoreMessage msg = 1;
}

message LongStoreResponse {
	bytes result = 1;
}

message SendManyTimesRequest {
	StoreMessage msg = 1;
}

message SendManyTimesResponse {
	bytes result = 1;
}

service StoreService {
    rpc Store(StoreRequest) returns (StoreResponse) {};

	// server streaming
	rpc SendManyTimes(SendManyTimesRequest) returns (stream SendManyTimesResponse) {};
	//client streaming
	rpc LongStore(stream LongStoreRequest) returns (LongStoreResponse) {};
}

